RESOLVED FIXED310783
[JSC] Fix null butterfly dereference in JSValue::dumpInContextAssumingStructure
https://bugs.webkit.org/show_bug.cgi?id=310783
Summary [JSC] Fix null butterfly dereference in JSValue::dumpInContextAssumingStructure
Sosuke Suzuki
Reported 2026-03-26 00:14:21 PDT
...
Attachments
Sosuke Suzuki
Comment 1 2026-03-26 00:21:05 PDT
EWS
Comment 2 2026-03-27 22:33:29 PDT
Committed 310137@main (3f22094cdc45): <https://commits.webkit.org/310137@main> Reviewed commits have been landed. Closing PR #61390 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-27 22:34:13 PDT
Note You need to log in before you can comment on or make changes to this bug.